# LSSEFT

./: .gitmodules  CMakeLists.txt  README.md  core.h  defaults.h  exceptions.h  main.cpp  make-WizCOLA-db
CosmoSIS/: dd_fit_resum_EdS_2000_1024.ini  dd_fit_resum_full_2000_1024.ini  rsd_fit.py  rsd_fit_noresum_EdS_Pk_2000_1024.ini  rsd_fit_noresum_full_Pk_2000_1024.ini  rsd_fit_resum_EdS_Pk_2000_1024.ini  rsd_fit_resum_full_Pk_2000_1024.ini
CosmoSIS/FitAtFixedZ/: dd_counterterms.ini  dd_fit.py  rsd_counterterms.ini  rsd_fit.py
CosmoSIS/FitAtFixedZ/z0/: dd_fit_resum_EdS_2000_1024.ini  dd_fit_resum_full_2000_1024.ini  rsd_fit_noresum_EdS_Pk_2000_1024.ini  rsd_fit_noresum_EdS_noPk_2000_1024.ini  rsd_fit_noresum_full_Pk_2000_1024.ini  rsd_fit_noresum_full_noPk_2000_1024.ini  rsd_fit_resum_EdS_Pk_2000_1024.ini  rsd_fit_resum_EdS_noPk_2000_1024.ini  rsd_fit_resum_full_Pk_2000_1024.ini  rsd_fit_resum_full_noPk_2000_1024.ini
CosmoSIS/FitAtFixedZ/z0/shared/: 1000_1024_data.ini  2000_1024_MCMC_data.ini  2000_1024_smallfit_data.ini  MDR1_data.ini  growth_EdS.ini  growth_full.ini  theory_noresum_EdS.ini  theory_noresum_full.ini  theory_resum_EdS.ini  theory_resum_full.ini
CosmoSIS/FitAtFixedZ/z025/: rsd_fit_resum_EdS_Pk_2000_1024.ini  rsd_fit_resum_full_Pk_2000_1024.ini
CosmoSIS/FitAtFixedZ/z025/shared/: 2000_1024_data.ini  growth_EdS.ini  growth_full.ini  theory_resum_EdS.ini  theory_resum_full.ini
CosmoSIS/FitAtFixedZ/z05/: rsd_fit_noresum_full_Pk_2000_1024.ini  rsd_fit_resum_EdS_Pk_2000_1024.ini  rsd_fit_resum_full_Pk_2000_1024.ini
CosmoSIS/FitAtFixedZ/z075/: rsd_fit_resum_EdS_Pk_2000_1024.ini  rsd_fit_resum_full_Pk_2000_1024.ini
CosmoSIS/FitAtFixedZ/z1/: rsd_fit_resum_EdS_Pk_2000_1024.ini  rsd_fit_resum_full_Pk_2000_1024.ini
CosmoSIS/FitZDependence/: Z_fit.py  zdep-EdS.ini  zdep-full.ini  zdep_MCMC-EdS.ini  zdep_MCMC-full.ini  zdep_counterterms.ini
CosmoSIS/GlobalFit/: EFT_counterterms.ini  EFT_global-EdS.ini  EFT_global-full.ini  EFT_global.py
MPI/: mpi_operations.h
MPI_detail/: mpi_operations.h  mpi_payloads.cpp  mpi_payloads.h  mpi_traits.h
cmake/: BuildCUBA.cmake  BuildDeps.cmake
controller/: MDR1_controller.cpp  Planck2015_controller.cpp  argument_cache.cpp  argument_cache.h  local_environment.cpp  local_environment.h  master_controller.cpp  master_controller.h  scheduler.cpp  scheduler.h  slave_controller.cpp  slave_controller.h  task_manager.cpp  task_manager.h
controller/work_functions/: MDR1_controller.cpp  Planck2015_controller.cpp  WizCOLA_controller.cpp  WizCOLA_sampler_controller.cpp  zhistory_controller.cpp
cosmology/: EdS_growth.cpp  EdS_growth.h  FRW_model.cpp  FRW_model.h  MDR1_sim.h  Matsubara_XY_calculator.cpp  Matsubara_XY_calculator.h  Pk_filter.cpp  Pk_filter.h  Planck_defaults.h  constants.h  multipole_Pk_calculator.cpp  multipole_Pk_calculator.h  one_loop_Pk_calculator.cpp  one_loop_Pk_calculator.h  oneloop_Pk_calculator.cpp  oneloop_Pk_calculator.h  oneloop_growth_integrator.cpp  oneloop_growth_integrator.h  oneloop_integrator.cpp  oneloop_integrator.h  oneloop_momentum_integrator.cpp  oneloop_momentum_integrator.h  transfer_integrator.cpp  transfer_integrator.h  types.h
cosmology/concepts/: Matsubara_A.cpp  Matsubara_A.h  Matsubara_XY.cpp  Matsubara_XY.h  Pk_resum_value.h  Pk_value.h  filtered_Pk.cpp  filtered_Pk.h  filtered_Pk_value.cpp  filtered_Pk_value.h  loop_integral.cpp  loop_integral.h  multipole_Pk.cpp  multipole_Pk.h  one_loop_Pk.cpp  one_loop_Pk.h  oneloop.cpp  oneloop.h  oneloop_Pk.cpp  oneloop_Pk.h  oneloop_growth.cpp  oneloop_growth.h  oneloop_resum_Pk.cpp  oneloop_resum_Pk.h  power_spectrum.h  range.h  transfer_function.cpp  transfer_function.h  tree_power_spectrum.cpp  tree_power_spectrum.h
cosmology/concepts/power_spectrum_detail/: generic.h  linear.cpp  linear.h  spline.cpp  spline.h  splined.h  types.h  wiggle.cpp  wiggle.h  wiggle_adapters.cpp  wiggle_adapters.h
cosmology/concepts/range_detail/: aggregation.h  common.h  range.h  stepping.h
cosmology/models/: MDR1_sim.h  WizCOLA.h
cosmology/oneloop_integrands/: delta_13.h  delta_22.h  delta_rsd_13.h  delta_rsd_22.h  integrands.h  shared.h
database/: IR_cutoff_database.h  IR_database.h  IR_resum_database.h  Pk_database.h  UV_cutoff_database.h  UV_database.h  data_manager.cpp  data_manager.h  data_manager_impl.h  database.cpp  database.h  generic_record_iterator.h  generic_value_iterator.h  k_database.h  powerspectrum_database.cpp  powerspectrum_database.h  powerspectrum_record.cpp  powerspectrum_record.h  redshift_database.cpp  redshift_database.h  tokens.cpp  tokens.h  transaction_manager.cpp  transaction_manager.h  wavenumber_database.cpp  wavenumber_database.h  wavenumber_record.h  z_database.cpp  z_database.h  z_record.cpp  z_record.h
database/data_manager_impl/: admin.cpp  build_database.cpp  data_manager.cpp  find.cpp  lookup_insert.cpp  services.cpp  tokenize.cpp  transactions.cpp  types.h  work_lists.cpp
error/: error_handler.cpp  error_handler.h
localizations/: messages.h
localizations/en_GB/: Pk_filter.h  command_line.h  database.h  en_GB.h  error_handler.h  format.h  kmodes_file.h  master_controller.h  oneloop_Pk_calculator.h  parameters_file.h  power_spectrum.h  range.h  sqlite3.h  task_manager.h  transaction_manager.h  tree_power_spectrum.h
misc/: ansi_colour_codes.h
sqlite3_detail/: FRW_model.cpp  FRW_model.h  MatsubaraXY_params.cpp  MatsubaraXY_params.h  create.cpp  create.h  filter_data.cpp  filter_data.h  filter_params.cpp  filter_params.h  find.cpp  find.h  growth_params.cpp  growth_params.h  missing_elements.cpp  missing_elements.h  oneloop_params.cpp  oneloop_params.h  operations.h  pipeline_id.cpp  pipeline_id.h  power_spectrum.cpp  power_spectrum.h  redshift.cpp  redshift.h  sqlite3_defaults.h  sqlite3_policy.cpp  sqlite3_policy.h  store.cpp  store.h  temporary_tables.cpp  temporary_tables.h  utilities.cpp  utilities.h  wavenumber.cpp  wavenumber.h
units/: Mpc_units.h  eV_units.h
utilities/: finder.cpp  finder.h  formatter.cpp  formatter.h  python_finder.cpp  python_finder.h
(+16 files in other folders)
